--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p>Contactame a traves de:</p>
         <div class="contacto">
                 <a href="https://wa.me/937450359?text=Hola!%20Estoy%20interesado%20en%20tus%20servicios%20web." target="_blank">Mi WhatsApp</a>
-                <a href="mailto:tucorreo@gmail.com?subject=Consulta%20sobre%20tus%20servicios"  target="_blank">Mi Correo</a>
+                <a href="mailto:vicentejavierbueno17@gmail.com?subject=Consulta%20sobre%20tus%20servicios"  target="_blank">Mi Correo</a>
             </div>
     </footer>
 </body>
