nuevas paginas realizadas

--- a/index.html
+++ b/index.html
@@ -7,27 +7,32 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="body">
+<header>
+    <nav class="navegacion">
+        <ul class="menu">
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="servicio.html">Servicios</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+    </nav>
+</header>
+
     <main> 
-    <h1 class="titulo">Hola, soy Vicente Bueno </h1>
-    <p>Creo sitios modernos, rapidos y pensados para convertir visitantes en cliente </p> 
-    <p>Hoy en dia nos encontramos en una revolucion tecnologica en donde para poder ganar mas cliente o pode tener mas presencia en internet es fundamental contar con una pagina web 
-        porque asi poder llegar a mas persona y poder mostrar los servicios o productos que ofreces.<br>
-        Por este motivo es el cual me gustaria ofrecer mis servicios de desarrollo web para asi poder ayudarte a que puedas tener un sitio web moderno
-    </p>
-    <p>Soy estudiante de 4 semestre de analista programador y me gusta el desarrollo web por eso vengo a ofercer mis servicios de Desarrollador web </p>
-
-
+        <div class="hero-left">
+    <h1>Hola, soy Vicente Bueno </h1>
     </main>
-    
-    
+        <div class="hero-right">
+    <img src="imagenes/foto.jpeg" alt="Foto de Vicente Bueno" class="foto">
+
+    <p>Creo sitios web modernos, rápidos y diseñados para convertir visitantes en clientes.
+    Vivimos una verdadera revolución tecnológica, y hoy más que nunca, tener presencia en internet es esencial para hacer crecer tu negocio.
+    Contar con una página web profesional te permite llegar a más personas, mostrar lo que ofreces y transmitir confianza a tus potenciales clientes.
+    Por eso, quiero ofrecerte mis servicios de desarrollo web: mi objetivo es ayudarte a construir un sitio moderno, atractivo y enfocado en resultados.
+    </p>
+    </div>
     <footer> 
         <div class="footer" >
         <p>2025 Vicente Bueno - Desarrollador Web Junior - Estudiante de Informatica</p>
-        <p>Contactame a traves de:</p>
-        <div class="contacto">
-                <a href="https://wa.me/937450359?text=Hola!%20Estoy%20interesado%20en%20tus%20servicios%20web." target="_blank">Mi WhatsApp</a>
-                <a href="mailto:vicentejavierbueno17@gmail.com?subject=Consulta%20sobre%20tus%20servicios"  target="_blank">Mi Correo</a>
-            </div>
     </footer>
 </body>
 </html>
