--- a/contacto.html
+++ b/contacto.html
@@ -16,7 +16,7 @@
         </ul>
     </nav>
 </header>
-    <main>
+    <main class="main">
     <h1 class="titulo">Contacto</h1>
     <p>¿Tienes un proyecto en mente o quieres una cotización para tu futuro sitio web?</p>
     <p>¡Estaré encantado de ayudarte! Puedes contactarme a través de los siguientes medios:</p>
@@ -28,6 +28,7 @@
         <div class="contacto">
                 <a href="https://wa.me/937450359?text=Hola!%20Estoy%20interesado%20en%20tus%20servicios%20web." target="_blank">Mi WhatsApp</a>
                 <a href="mailto:vicentejavierbueno17@gmail.com?subject=Consulta%20sobre%20tus%20servicios"  target="_blank">Mi Correo</a>
+            </div>
             </div>
     </footer>
 
