--- a/index.html
+++ b/index.html
@@ -16,22 +16,24 @@
         </ul>
     </nav>
 </header>
-    <main>
+    <main class="main">
         <div class="hero-left">
-    <h1>Hola, soy Vicente Bueno </h1>
-    </main>
+    <h1>Hola, soy Vicente Bueno </h1><br>
         <div class="hero-right">
     <img src="imagenes/foto.jpeg" alt="Foto de Vicente Bueno" class="foto">
-
     <p>Creo sitios web modernos, rápidos y diseñados para convertir visitantes en clientes.
     Vivimos una verdadera revolución tecnológica, y hoy más que nunca, tener presencia en internet es esencial para hacer crecer tu negocio.
     Contar con una página web profesional te permite llegar a más personas, mostrar lo que ofreces y transmitir confianza a tus potenciales clientes.
     Por eso, quiero ofrecerte mis servicios de desarrollo web: mi objetivo es ayudarte a construir un sitio moderno, atractivo y enfocado en resultados.
     </p>
     </div>
+    </div>
+    </main>
     <footer>
+
         <div class="footer" >
         <p>2025 Vicente Bueno - Desarrollador Web Junior - Estudiante de Informatica</p>
+        </div>
     </footer>
 </body>
 </html>
