--- a/servicio.html
+++ b/servicio.html
@@ -16,7 +16,7 @@
         </ul>
     </nav>
 </header>
-<main>
+<main class="main">
     <h1 class="titulo">Servicios</h1>
     <p>Ofrezco servicios de desarrollo web enfocados en ayudarte a construir una presencia digital sólida, moderna y atractiva.</p>
     <h2>Mis servicios incluyen:</h2><br>
