--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
         </ul>
     </nav>
 </header>
-    <main class="main">
+<main class="main">
+    
         <div class="hero-left">
     <h1>Hola, soy Vicente Bueno </h1><br>
+    </div>
         <div class="hero-right">
     <img src="imagenes/foto.jpeg" alt="Foto de Vicente Bueno" class="foto">
     <p>Creo sitios web modernos, rápidos y diseñados para convertir visitantes en clientes.
