--- a/contacto.html
+++ b/contacto.html
@@ -23,7 +23,7 @@
     </main>
     <footer>
         <div class="footer" >
-        <p>2025 Vicente Bueno - Desarrollador Web Junior - Estudiante de Informatica</p>
+        <p>2025 Vicente Bueno - Desarrollador Web Junior | freelancer  - Estudiante de Informatica</p>
         <p>Contactame a traves de:</p>
         <div class="contacto">
                 <a href="https://wa.me/937450359?text=Hola!%20Estoy%20interesado%20en%20tus%20servicios%20web." target="_blank">Mi WhatsApp</a>
