--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <footer>
 
         <div class="footer" >
-        <p>2025 Vicente Bueno - Desarrollador Web Junior - Estudiante de Informatica</p>
+        <p>2025 Vicente Bueno - Desarrollador Web Junior | freelancer - Estudiante de Informatica</p>
         </div>
     </footer>
 </body>
