--- a/servicio.html
+++ b/servicio.html
@@ -30,7 +30,7 @@
 </main>
     <footer>
         <div class="footer" >
-        <p>2025 Vicente Bueno - Desarrollador Web Junior - Estudiante de Informatica</p>
+        <p>2025 Vicente Bueno - Desarrollador Web Junior | freelancer  - Estudiante de Informatica</p>
         </div>
     </footer>
 </body>
