agrego pestaña de portafolio

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <li><a href="index.html">Inicio</a></li>
             <li><a href="servicio.html">Servicios</a></li>
             <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="portafolio.html">Portafolio</a></li>
         </ul>
     </nav>
 </header>
@@ -22,7 +23,7 @@
     <h1>Hola, soy Vicente Bueno </h1><br>
     </div>
         <div class="hero-right">
-    <img src="imagenes/foto.jpeg" alt="Foto de Vicente Bueno" class="foto">
+    <img src="imagenes/foto1.jpeg" alt="Foto de Vicente Bueno" class="foto1">
     <p>Creo sitios web modernos, rápidos y diseñados para convertir visitantes en clientes.
     Vivimos una verdadera revolución tecnológica, y hoy más que nunca, tener presencia en internet es esencial para hacer crecer tu negocio.
     Contar con una página web profesional te permite llegar a más personas, mostrar lo que ofreces y transmitir confianza a tus potenciales clientes.
