--- a/servicio.html
+++ b/servicio.html
@@ -11,8 +11,8 @@
     <nav class="navegacion">
         <ul class="menu">
             <li><a href="index.html">Inicio</a></li>
-            <li><a href="servicio.html">Servicios</a></li>
             <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="portafolio.html">Portafolio</a></li>
         </ul>
     </nav>
 </header>
