--- a/contacto.html
+++ b/contacto.html
@@ -12,7 +12,7 @@
         <ul class="menu">
             <li><a href="index.html">Inicio</a></li>
             <li><a href="servicio.html">Servicios</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="portafolio.html">Portafolio</a></li>
         </ul>
     </nav>
 </header>
