--- a/contacto.html
+++ b/contacto.html
@@ -12,6 +12,7 @@
         <ul class="menu">
             <li><a href="index.html">Inicio</a></li>
             <li><a href="servicio.html">Servicios</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
             <li><a href="portafolio.html">Portafolio</a></li>
         </ul>
     </nav>
@@ -20,15 +21,14 @@
     <h1 class="titulo">Contacto</h1>
     <p>¿Tienes un proyecto en mente o quieres una cotización para tu futuro sitio web?</p>
     <p>¡Estaré encantado de ayudarte! Puedes contactarme a través de los siguientes medios:</p>
+    <div class="contacto">
+                <a href="https://wa.me/937450359?text=Hola!%20Estoy%20interesado%20en%20tus%20servicios%20web." target="_blank">Mi WhatsApp</a>
+                <a href="mailto:vicentejavierbueno17@gmail.com?subject=Consulta%20sobre%20tus%20servicios"  target="_blank">Mi Correo</a>
+            </div>
     </main>
     <footer>
         <div class="footer" >
         <p>2025 Vicente Bueno - Desarrollador Web Junior | freelancer  - Estudiante de Informatica</p>
-        <p>Contactame a traves de:</p>
-        <div class="contacto">
-                <a href="https://wa.me/937450359?text=Hola!%20Estoy%20interesado%20en%20tus%20servicios%20web." target="_blank">Mi WhatsApp</a>
-                <a href="mailto:vicentejavierbueno17@gmail.com?subject=Consulta%20sobre%20tus%20servicios"  target="_blank">Mi Correo</a>
-            </div>
             </div>
     </footer>
 
