--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body class="body">
 <header>
+    
     <nav class="navegacion">
         <ul class="menu">
             <li><a href="index.html">Inicio</a></li>
@@ -23,7 +24,7 @@
     <h1>Hola, soy Vicente Bueno </h1><br>
     </div>
         <div class="hero-right">
-    <img src="imagenes/foto1.jpeg" alt="Foto de Vicente Bueno" class="foto1">
+    <img src="imagenes/foto1.jpeg" alt="Foto de Vicente Bueno" class="foto1" texto="Foto de Vicente Bueno">
     <p>Creo sitios web modernos, rápidos y diseñados para convertir visitantes en clientes.
     Vivimos una verdadera revolución tecnológica, y hoy más que nunca, tener presencia en internet es esencial para hacer crecer tu negocio.
     Contar con una página web profesional te permite llegar a más personas, mostrar lo que ofreces y transmitir confianza a tus potenciales clientes.
@@ -33,7 +34,6 @@
     </div>
     </main>
     <footer>
-
         <div class="footer" >
         <p>2025 Vicente Bueno - Desarrollador Web Junior | freelancer - Estudiante de Informatica</p>
         </div>
