--- a/servicio.html
+++ b/servicio.html
@@ -11,6 +11,7 @@
     <nav class="navegacion">
         <ul class="menu">
             <li><a href="index.html">Inicio</a></li>
+            <li><a href="servicio.html">Servicios</a></li>
             <li><a href="contacto.html">Contacto</a></li>
             <li><a href="portafolio.html">Portafolio</a></li>
         </ul>
@@ -20,7 +21,7 @@
     <h1 class="titulo">Servicios</h1>
     <p>Ofrezco servicios de desarrollo web enfocados en ayudarte a construir una presencia digital sólida, moderna y atractiva.</p>
     <h2>Mis servicios incluyen:</h2><br>
-    <ul>
+    <ul >
         <li>Diseño y desarrollo de sitios web personalizados, adaptados a tus necesidades y objetivos.</li><br>
         <li>Optimización para motores de búsqueda (SEO), para que tus clientes te encuentren fácilmente.</li><br>
         <li>Integración de canales de contacto directo, como WhatsApp y correo electrónico.</li><br>
