--- a/servicio.html
+++ b/servicio.html
@@ -10,7 +10,7 @@
 <header>
     <nav class="navegacion">
         <ul class="menu">
-            <li><a href="index.html">Inicio</a></li>
+            <li><a href="/">Inicio</a></li>
             <li><a href="servicio.html">Servicios</a></li>
             <li><a href="contacto.html">Contacto</a></li>
             <li><a href="portafolio.html">Portafolio</a></li>
