--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <nav class="navegacion">
         <ul class="menu">
             <li><a href="/">Inicio</a></li>
-            <li><a href="servicio.html">Servicios</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-            <li><a href="portafolio.html">Portafolio</a></li>
+            <li><a href="/servicio">Servicios</a></li>
+            <li><a href="/contacto">Contacto</a></li>
+            <li><a href="/portafolio">Portafolio</a></li>
         </ul>
     </nav>
 </header>
