--- a/contacto.html
+++ b/contacto.html
@@ -10,7 +10,7 @@
 <header>
     <nav class="navegacion">
         <ul class="menu">
-            <<li><a href="/">Inicio</a></li>
+            <li><a href="/">Inicio</a></li>
             <li><a href="/servicio">Servicios</a></li>
             <li><a href="/contacto">Contacto</a></li>
             <li><a href="/portafolio">Portafolio</a></li>
