--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head >
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta meta name="description" content="Vicente Bueno: Desarrollo de sitios web modernos, rápidos y enfocados en convertir visitantes en clientes. ¡Cotiza tu proyecto hoy!">
     <title>Mi Pagina</title>
     <link rel="stylesheet" href="styles.css">
 </head>
