Resolver conflictos después del pull

--- a/contacto.html
+++ b/contacto.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
+    <meta name="description" content="¿Necesitas un sitio web? Contacta directamente a Vicente Bueno por WhatsApp o correo electrónico para obtener tu cotización personalizada de desarrollo web.">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="body">
