--- a/portafolio.html
+++ b/portafolio.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portafolio</title>
+    <title>Portafolio de Desarrollo Web</title>
+    <meta name="description" content="Revisa el portafolio de Vicente Bueno, incluyendo el desarrollo de Tiendas Online y sitios web modernos con diseño responsive. ¡Inspírate para tu próximo proyecto!">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="body">
@@ -25,7 +26,7 @@
     <div>
         <h2>Proyecto 1: Tienda Online AnimeKai (actualmente en desarrollo, como parte de un proyecto en curso). </h2>
         <p>Creé este sitio web para una tienda que vende productos de anime. El objetivo era mostrar los productos de forma atractiva y hacer que los clientes puedan contactar fácilmente desde cualquier dispositivo. El resultado: un sitio moderno que se ve perfecto tanto en celular como en computadora, y que transmite profesionalismo.</p>
-        <img src="imagenes/animekai.png" alt="Proyecto1" class="foto" texto="Proyecto1">
+        <img src="imagenes/animekai.png" alt="Diseño de Tienda Online AnimeKai con galería de productos" class="foto" texto="Proyecto1">
         
         <div class="descripcion1">
         <h3>Lo que incluye este proyecto:</h3><br>
