--- a/servicio.html
+++ b/servicio.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Servicios</title>
+    <title>Servicios de Desarrollo Web</title>
+    <meta name="description" content="Descubre mis servicios de diseño web a medida, optimización SEO para mejorar tu visibilidad en Google e integración de canales de contacto directo (WhatsApp/Email).">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="body">
@@ -20,13 +21,16 @@
 <main class="main">
     <h1 class="titulo">Servicios</h1>
     <p>Ofrezco servicios de desarrollo web enfocados en ayudarte a construir una presencia digital sólida, moderna y atractiva.</p>
-    <h2>Mis servicios incluyen:</h2><br>
+    <h2>Mis servicios incluyen:</h2>
     <ul >
-        <li>Diseño y desarrollo de sitios web personalizados, adaptados a tus necesidades y objetivos.</li><br>
-        <li>Optimización para motores de búsqueda (SEO), para que tus clientes te encuentren fácilmente.</li><br>
-        <li>Integración de canales de contacto directo, como WhatsApp y correo electrónico.</li><br>
-        <li>Soporte y mantenimiento continuo para asegurar el buen funcionamiento de tu sitio.</li><br>
-    </ul><br>
+        <li>Diseño y desarrollo de sitios web personalizados, adaptados a tus necesidades y objetivos.</li>
+
+        <li>Optimización para motores de búsqueda (SEO), para que tus clientes te encuentren fácilmente.</li>
+
+        <li>Integración de canales de contacto directo, como WhatsApp y correo electrónico.</li>
+
+        <li>Soporte y mantenimiento continuo para asegurar el buen funcionamiento de tu sitio.</li>
+    </ul>
     <p>Si alguno de estos servicios se ajusta a lo que estás buscando, no dudes en contactarme. Estaré encantado de ayudarte a llevar tu presencia online al siguiente nivel.</p>
 </main>
     <footer>
