Solucionado conflicto en index.html

--- a/servicio.html
+++ b/servicio.html
@@ -9,12 +9,15 @@
 </head>
 <body class="body">
 <header>
-    <nav class="navegacion">
+    <button class="menu-toggle" id="menuToggle" aria-label="Toggle menu">
+        ☰
+    </button>
+    <nav class="navegacion" id="menu">
         <ul class="menu">
             <li><a href="/">Inicio</a></li>
-            <li><a href="/servicio">Servicios</a></li>
-            <li><a href="/contacto">Contacto</a></li>
-            <li><a href="/portafolio">Portafolio</a></li>
+            <li><a href="servicio.html">Servicios</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="portafolio.html">Portafolio</a></li>
         </ul>
     </nav>
 </header>
@@ -38,5 +41,6 @@
         <p>2025 Vicente Bueno - Desarrollador Web Junior | freelancer  - Estudiante de Informatica</p>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
