--- a/index.html
+++ b/index.html
@@ -2,25 +2,25 @@
 <html lang="es">
 <head >
     <meta charset="UTF-8">
-<<<<<<< Updated upstream
     <meta meta name="description" content="Vicente Bueno: Desarrollo de sitios web modernos, rápidos y enfocados en convertir visitantes en clientes. ¡Cotiza tu proyecto hoy!">
     <title>Mi Pagina</title>
-=======
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vicente Bueno | Desarrollador Web Freelance & Junior | Santiago, Chile</title>
-    <meta name="description" content="Vicente Bueno: Desarrollo de sitios web modernos, rápidos y enfocados en convertir visitantes en clientes. ¡Cotiza tu proyecto hoy!">
->>>>>>> Stashed changes
+   <meta name="description" content="Vicente Bueno: Desarrollo de sitios web modernos, rápidos y enfocados en convertir visitantes en clientes. ¡Cotiza tu proyecto hoy!">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="body">
 <header>
-    
-    <nav class="navegacion">
+    <button class="menu-toggle" id="me" aria-label="Toggle menu">
+        ☰
+    </button>
+        
+    <nav class="navegacion" id="menu">
         <ul class="menu">
             <li><a href="/">Inicio</a></li>
-            <li><a href="/servicio">Servicios</a></li>
-            <li><a href="/contacto">Contacto</a></li>
-            <li><a href="/portafolio">Portafolio</a></li>
+            <li><a href="servicio.html">Servicios</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="portafolio.html">Portafolio</a></li>
         </ul>
     </nav>
 </header>
@@ -44,5 +44,6 @@
         <p>2025 Vicente Bueno - Desarrollador Web Junior | freelancer - Estudiante de Informatica</p>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
