--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body class="body">
 <header>
-    <button class="menu-toggle" id="me" aria-label="Toggle menu">
+    <button class="menu-toggle" id="menuToggle" aria-label="Toggle menu">
         ☰
     </button>
         
