--- a/contacto.html
+++ b/contacto.html
@@ -14,10 +14,10 @@
     </button>
     <nav class="navegacion" id="menu">
         <ul class="menu">
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="servicio.html">Servicios</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-            <li><a href="portafolio.html">Portafolio</a></li>
+            <li><a href="/">Inicio</a></li>
+            <li><a href="servicio/">Servicios</a></li>
+            <li><a href="contacto/">Contacto</a></li>
+            <li><a href="portafolio/">Portafolio</a></li>
         </ul>
     </nav>
 </header>
