--- a/servicio.html
+++ b/servicio.html
@@ -15,9 +15,9 @@
     <nav class="navegacion" id="menu">
         <ul class="menu">
             <li><a href="/">Inicio</a></li>
-            <li><a href="servicio/">Servicios</a></li>
-            <li><a href="contacto/">Contacto</a></li>
-            <li><a href="portafolio/">Portafolio</a></li>
+            <li><a href="/servicio/">Servicios</a></li>
+            <li><a href="/contacto/">Contacto</a></li>
+            <li><a href="/portafolio/">Portafolio</a></li>
         </ul>
     </nav>
 </header>
