--- a/contacto.html
+++ b/contacto.html
@@ -14,7 +14,7 @@
     </button>
     <nav class="navegacion" id="menu">
         <ul class="menu">
-            <<li><a href="/">Inicio</a></li>
+            <li><a href="/">Inicio</a></li>
             <li><a href="/servicio">Servicios</a></li>
             <li><a href="/contacto">Contacto</a></li>
             <li><a href="/portafolio">Portafolio</a></li>
