--- a/portafolio.html
+++ b/portafolio.html
@@ -37,7 +37,7 @@
         <p>Galería de productos con imágenes llamativas.</p>
         <p>Menú de navegación fácil de usar.</p>
         <p>Formulario de contacto.</p>
-        <a class = "button"href="https://vicentejavier23.github.io/AnimeKai/"target="_blank">Visita el sitio web</a>
+        <a class = "button"href="https://main.d22uusz70n273b.amplifyapp.com/index/"target="_blank">Visita el sitio web</a>
         </div>
         
     </div>
@@ -47,6 +47,9 @@
         <p>2025 Vicente Bueno - Desarrollador Web Junior | freelancer  - Estudiante de Informatica</p>
         </div>
     </footer>
+    <script>
+    (function(){if(!window.chatbase||window.chatbase("getState")!=="initialized"){window.chatbase=(...arguments)=>{if(!window.chatbase.q){window.chatbase.q=[]}window.chatbase.q.push(arguments)};window.chatbase=new Proxy(window.chatbase,{get(target,prop){if(prop==="q"){return target.q}return(...args)=>target(prop,...args)}})}const onLoad=function(){const script=document.createElement("script");script.src="https://www.chatbase.co/embed.min.js";script.id="UCdAMEt5-9OcUqXFAD1uv";script.domain="www.chatbase.co";document.body.appendChild(script)};if(document.readyState==="complete"){onLoad()}else{window.addEventListener("load",onLoad)}})();
+    </script>
     <script src="script.js"></script>
 </body>
 </html>
