--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body class="body">
 <header>
-    <button class="menu-toggle" id="me" aria-label="Toggle menu">
+    <button class="menu-toggle" id="menuToggle" aria-label="Toggle menu">
         ☰
     </button>
         
@@ -24,6 +24,7 @@
         </ul>
     </nav>
 </header>
+
 <main class="main">
     
         <div class="hero-left">
@@ -39,11 +40,15 @@
     </div>
     </div>
     </main>
+
     <footer>
         <div class="footer" >
         <p>2025 Vicente Bueno - Desarrollador Web Junior | freelancer - Estudiante de Informatica</p>
         </div>
     </footer>
+    <script>
+    (function(){if(!window.chatbase||window.chatbase("getState")!=="initialized"){window.chatbase=(...arguments)=>{if(!window.chatbase.q){window.chatbase.q=[]}window.chatbase.q.push(arguments)};window.chatbase=new Proxy(window.chatbase,{get(target,prop){if(prop==="q"){return target.q}return(...args)=>target(prop,...args)}})}const onLoad=function(){const script=document.createElement("script");script.src="https://www.chatbase.co/embed.min.js";script.id="UCdAMEt5-9OcUqXFAD1uv";script.domain="www.chatbase.co";document.body.appendChild(script)};if(document.readyState==="complete"){onLoad()}else{window.addEventListener("load",onLoad)}})();
+    </script>
     <script src="script.js"></script>
 </body>
 </html>
